--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .fru-section {
@@ -19,15 +20,6 @@
 .btn {
   border: none;
   outline: none;
-}
-
-.submit-button {
-  width: 50%;
-  height: 80px;
-  border-radius: 20px;
-  background-color: #4D55E6;
-  font-size: 1.2rem;
-  color: white;
 }
 
 .option, .alternate-option {
@@ -63,13 +55,17 @@
   margin: 0 auto;
 }
 
-.fru-form input {
+.fru-form-input {
   width: 60%;
-  border: none;
   border-radius: 5px;
   border: 1px solid rgb(199, 199, 199);
   padding: 20px 15px;
   margin: 10px 0;
+  outline: none;
+}
+
+.fru-form-input:focus {
+  border: 1px solid rgb(138, 138, 138);
 }
 
 /* Entrance */
@@ -82,6 +78,15 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+}
+
+#welcome-message {
+  position: absolute;
+  top: 20px;
+}
+
+#welcome-message h2 {
+  font-size: 2rem;
 }
 
 .entrance-figure {
@@ -105,13 +110,13 @@
   position: relative;
 }
 
-#welcome-message {
-  position: absolute;
-  top: 20px;
-}
-
-#welcome-message h2 {
-  font-size: 2rem;
+.entrance-button {
+  width: 50%;
+  height: 80px;
+  border-radius: 20px;
+  background-color: #4D55E6;
+  font-size: 1.2rem;
+  color: white;
 }
 
 /* Sign In */
@@ -128,17 +133,70 @@
 .signin-section h2 {
   position: absolute;
   top: 10px;
+  font-size: 2rem;
+  color: #4D55E6;
 }
 
-.signin-button {
+.submit-button {
   width: 30%;
   height: 60px;
   border: none;
   border-radius: 5px;
   background-color: #4D55E6;
   color: white;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+  margin-top: 20px;
+  font-size: 1.2rem;
 }
 
-.signin-button:hover {
-  background-color: black;
+.submit-button:hover {
+  background-color: rgba(77, 85, 230, 0.9);
+}
+
+/* Form Header */
+
+.form-header {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: absolute;
+  top: 0;
+}
+
+.form-header p {
+  margin-right: 50px;
+}
+
+.form-redirection {
+  color: #4D55E6;
+  cursor: pointer;
+}
+
+.form-redirection:hover, .form-redirection:active {
+  color: rgba(77, 85, 230, 0.9);
+}
+
+/* Error Message */
+
+.error-message {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  color: #E66563;
+}
+
+.error-figure {
+  width: 40px;
+  margin: 0;
+  margin-right: 20px;
+}
+
+.error-figure img {
+  width: 100%;
+  height: auto;
 }
