--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4 {
   width: 60%;
   border-radius: 5px;
   border: 1px solid rgb(199, 199, 199);
-  padding: 20px 30px;
+  padding: 20px;
   margin: 10px 0;
   outline: none;
 }
