--- a/src/App.css
+++ b/src/App.css
@@ -221,3 +221,41 @@ h1, h2, h3, h4 {
   width: 100%;
   height: auto;
 }
+
+/* Leagues */
+
+.leagues {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.league-card {
+  width: 30%;
+  margin: 10px;
+  padding: 20px 0;
+  background-color: #E2B071;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.league-badge {
+  width: 70%;
+  margin: 0;
+}
+
+.league-badge img {
+  width: 100%;
+  height: auto;
+}
+
+.league-name {
+  width: 80%;
+  font-weight: 600;
+}
