--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,11 @@ h1, h2, h3, h4 {
   color: black;
 }
 
+.responsive-img {
+  width: 100%;
+  height: auto;
+}
+
 /* Forms */
 
 .fru-form {
@@ -98,11 +103,6 @@ h1, h2, h3, h4 {
 .entrance-figure {
   width: 30%;
   margin: 0;
-}
-
-.entrance-figure img {
-  width: 100%;
-  height: auto;
 }
 
 .entrance-article {
@@ -217,11 +217,6 @@ h1, h2, h3, h4 {
   display: none;
 }
 
-.error-figure img {
-  width: 100%;
-  height: auto;
-}
-
 /* Search Bar */
 
 .search-bar {
@@ -261,11 +256,6 @@ h1, h2, h3, h4 {
 .league-badge {
   width: 70%;
   margin: 0;
-}
-
-.league-badge img {
-  width: 100%;
-  height: auto;
 }
 
 .no-image {
@@ -345,11 +335,6 @@ h1, h2, h3, h4 {
   margin-left: 0;
 }
 
-.team-logo img {
-  width: 100%;
-  height: auto;
-}
-
 .summary {
   display: flex;
   justify-content: center;
@@ -417,27 +402,69 @@ h1, h2, h3, h4 {
   height: auto;
 }
 
-.social-logo img {
-  width: 100%;
-  height: auto;
-}
-
 /* Modal */
 
 .modal-container {
-  position: absolute;
-  top: 60px;
-  left: 25vw;
-  width: 50%;
-  height: 80vh;
-  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 5;
 }
 
 .modal {
   position: absolute;
-  width: 50%;
-  top: 50%;
-  left: 50px;
-  background-color: green;
+  width: 80%;
+  max-height: 70vh;
+  top: 25%;
+  left: 10%;
+  background-color: #E9CB87;
+  padding-bottom: 20px;
+  border-radius: 20px;
 }
+
+.modal-heading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.modal-close {
+  position: absolute;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  background-color:#121212;
+  cursor: pointer;
+  color: white;
+}
+
+.modal-close:hover, .modal-close:active {
+  background-color: #E66563;
+  color: black;
+}
+
+.stadium-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.stadium-img {
+  width: 40%;
+}
+
+.stadium-description {
+  width: 40%;
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+
