--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,15 @@ h1, h2, h3, h4 {
   transform: scale(0.95);
 }
 
+.highlight {
+  cursor: pointer;
+  transition: all .15s ease-in-out;
+}
+
+.highlight:hover, .highlight:active {
+  opacity: 0.9;
+}
+
 .alternate-option {
   color: #4D55E6;
   margin: 0;
@@ -275,6 +284,18 @@ h1, h2, h3, h4 {
 
 /* League Table */
 
+.league-details-button {
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 10px;
+  background-color: #E2B071;
+}
+
+.league-details-button:active {
+  background-color: rgba(226, 176, 113, 0.8);
+}
+
 .league-table-container {
   width: 60%;
   margin: 20px auto;
@@ -346,13 +367,15 @@ h1, h2, h3, h4 {
 .summary-box {
   width: 20%;
   height: 150px;
-  background-color: #A7BDDF;
+  /* background-color: #A7BDDF; */
+  background-color: #121212;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 10px;
   border-radius: 10px;
+  color: white;
 }
 
 .summary-box p {
