--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,16 @@ h1, h2, h3, h4 {
   height: auto;
 }
 
+.white-space {
+  white-space: pre-line;
+}
+
+.desc-text {
+  width: 60%;
+  margin: 0 auto;
+  text-align: left;
+}
+
 /* Forms */
 
 .fru-form {
@@ -391,10 +401,6 @@ h1, h2, h3, h4 {
 }
 
 .team-description {
-  width: 60%;
-  margin: 0 auto;
-  white-space: pre-line;
-  text-align: left;
   margin-top: 50px;
 }
 
@@ -488,6 +494,31 @@ h1, h2, h3, h4 {
   width: 40%;
   max-height: 300px;
   overflow-y: scroll;
+}
+
+/* League Details */
+
+.league-badge-and-trophy {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.badge-trophy-container {
+  width: 30%;
+  margin: 50px 0;
+  background-color: #E2B071;
+  padding: 50px;
+  border-radius: 20px;
+
+}
+
+.badge, .trophy {
+  width: 100%;
+  margin: 0;
 }
 
 
