--- a/src/App.css
+++ b/src/App.css
@@ -377,15 +377,14 @@ h1, h2, h3, h4 {
 .summary-box {
   width: 20%;
   height: 150px;
-  /* background-color: #A7BDDF; */
-  background-color: #121212;
+  background-color: white;
+  box-shadow: 5px 5px 10px rgb(194, 194, 194);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 10px;
   border-radius: 10px;
-  color: white;
 }
 
 .summary-box p {
