--- a/src/App.css
+++ b/src/App.css
@@ -378,7 +378,7 @@ h1, h2, h3, h4 {
   width: 20%;
   height: 150px;
   background-color: white;
-  box-shadow: 5px 5px 10px rgb(194, 194, 194);
+  box-shadow: 1px 1px 5px rgb(194, 194, 194);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -396,7 +396,13 @@ h1, h2, h3, h4 {
 }
 
 .stadium-button {
+  width: 50%;
+  height: 30px;
   margin-top: 20px;
+  border: none;
+  background-color:#e2b071cc;
+  border-radius: 20px;
+  outline: none;
 }
 
 .team-description {
