--- a/src/App.css
+++ b/src/App.css
@@ -324,6 +324,9 @@ h1, h2, h3, h4 {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .league-table-row td {
@@ -353,12 +356,20 @@ h1, h2, h3, h4 {
 
 .table-row {
   display: table-row;
-  width: 70%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .table-cell {
   display: table-cell;
+  flex: 1;
 }
+
+.team-name-cell {
+  flex: 2;
+}
+
 /* Team Details */
 
 .team-details-header {
