edited box-shadow of league table rows

--- a/src/App.css
+++ b/src/App.css
@@ -346,7 +346,7 @@ h1, h2, h3, h4 {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  filter: drop-shadow(1px 1px 3px #353535);
+  filter: drop-shadow(1px 1px 5px rgb(194, 194, 194));
   margin-bottom: 10px;
 }
 
