--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ h1, h2, h3, h4 {
 .entrance-panel {
   width: 50%;
   height: 100vh;
-  background-color: #ebebeb;
+  background-color:#4D55E6;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -139,14 +139,17 @@ h1, h2, h3, h4 {
 
 .welcome-message {
   width: 80%;
+  /* color: #AB886F; */
 }
 
 .welcome-message h2 {
   font-size: 2rem;
+  color: #E2B071;
 }
 
 .welcome-message p {
   font-size: 1.3rem;
+  color: #E2B071;
 }
 
 .entrance-figure {
@@ -169,13 +172,17 @@ h1, h2, h3, h4 {
   width: 40%;
   height: 80px;
   border-radius: 20px;
-  background-color: #4D55E6;
+  background-color: #E2B071;
   font-size: 1.2rem;
   color: white;
 }
 
+.entrance-section .option:hover {
+  background-color: #AB886F;
+}
+
 .entrance-option {
-  color: #4D55E6;
+  color: #E2B071;
 }
 
 .entrance-option:hover {
@@ -284,22 +291,22 @@ h1, h2, h3, h4 {
   width: 30%;
   height: 350px;
   margin: 10px;
-  padding: 20px 0;
-  background-color: #E2B071;
+  padding-top: 50px;
+  background-color: #e2af71;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   border-radius: 10px;
 }
 
 .league-badge {
-  width: 70%;
+  width: 60%;
   margin: 0;
 }
 
 .no-image {
-  width: 70%;
+  width: 60%;
   height: 250px;
   background-color: #AB886F;
   display: flex;
@@ -308,9 +315,32 @@ h1, h2, h3, h4 {
   align-items: center;
 }
 
+.league-name-container {
+  width: 100%;
+  height: 80px;
+  background-color: #AB886F;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .league-name {
-  width: 80%;
+  width: 90%;
   font-weight: 600;
+  color: white;
+}
+
+/* Search Leagues */
+
+.search-leagues h2 {
+  font-size: 2.5rem;
+  color: #AB886F;
+}
+
+.search-leagues h3 {
+  color: #E2B071;
 }
 
 /* League Table */
