--- a/src/App.css
+++ b/src/App.css
@@ -121,16 +121,14 @@ h1, h2, h3, h4 {
   height: 100vh;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
 }
 
-.entrance-panel {
-  width: 50%;
-  height: 100vh;
-  background-color:#4D55E6;
+.entrance-message {
+  width: 40%;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -144,12 +142,12 @@ h1, h2, h3, h4 {
 
 .welcome-message h2 {
   font-size: 2rem;
-  color: #E2B071;
+  /* color: #E2B071; */
 }
 
 .welcome-message p {
   font-size: 1.3rem;
-  color: #E2B071;
+  /* color: #E2B071; */
 }
 
 .entrance-figure {
@@ -157,8 +155,17 @@ h1, h2, h3, h4 {
   margin: 0;
 }
 
+.entrance-divider {
+  height: 30vh;
+  width: 1px;
+  background-color: rgb(167, 167, 167);
+  display: inline-block;
+  border: none;
+  margin: 0;
+}
+
 .entrance-article {
-  width: 50%;
+  width: 40%;
   height: 80vh;
   display: flex;
   flex-direction: column;
@@ -172,17 +179,13 @@ h1, h2, h3, h4 {
   width: 40%;
   height: 80px;
   border-radius: 20px;
-  background-color: #E2B071;
+  background-color: #4D55E6;
   font-size: 1.2rem;
   color: white;
 }
 
-.entrance-section .option:hover {
-  background-color: #AB886F;
-}
-
 .entrance-option {
-  color: #E2B071;
+  color: #4D55E6;
 }
 
 .entrance-option:hover {
