--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4 {
   width: 100%;
 }
 
+.fru-section h2 {
+  color: #634D32;
+}
+
 .divider {
   width: 10%;
   margin: 50px 0;
@@ -51,7 +55,7 @@ h1, h2, h3, h4 {
 }
 
 .alternate-option {
-  color: #4D55E6;
+  color: #E2B071;
   margin: 0;
 }
 
@@ -103,7 +107,7 @@ h1, h2, h3, h4 {
   height: 60px;
   border: none;
   border-radius: 5px;
-  background-color: #4D55E6;
+  background-color: #E2B071;
   color: white;
   cursor: pointer;
   transition: all .2s ease-in-out;
@@ -112,7 +116,7 @@ h1, h2, h3, h4 {
 }
 
 .submit-button:hover {
-  background-color: rgba(77, 85, 230, 0.9);
+  background-color: #df9f52;
 }
 
 /* Entrance */
@@ -137,7 +141,7 @@ h1, h2, h3, h4 {
 
 .welcome-message {
   width: 80%;
-  /* color: #AB886F; */
+  color: #634D32;
 }
 
 .welcome-message h2 {
@@ -151,7 +155,7 @@ h1, h2, h3, h4 {
 }
 
 .entrance-figure {
-  width: 70%;
+  width: 100%;
   margin: 0;
 }
 
@@ -175,17 +179,33 @@ h1, h2, h3, h4 {
   position: relative;
 }
 
+.entrance-buttons {
+  width: 100%;
+  margin-top: 20px;
+}
+
 .entrance-button {
   width: 40%;
   height: 80px;
-  border-radius: 20px;
-  background-color: #4D55E6;
+  border-radius: 10px;
+  background-color: #E2B071;
   font-size: 1.2rem;
   color: white;
+  margin: 0;
+}
+
+.entrance-button:first-child {
+  margin-right: 20px;
+}
+
+.alternate-button {
+  background-color:rgb(218, 218, 218);
+  color: black;
 }
 
 .entrance-option {
-  color: #4D55E6;
+  color: #E2B071;
+  font-size: 1.2rem;
 }
 
 .entrance-option:hover {
@@ -207,7 +227,7 @@ h1, h2, h3, h4 {
   position: absolute;
   top: 10px;
   font-size: 2rem;
-  color: #4D55E6;
+  color: #E2B071;
 }
 
 /* Register */
@@ -241,12 +261,12 @@ h1, h2, h3, h4 {
 }
 
 .form-redirection {
-  color: #4D55E6;
+  color: #E2B071;
   cursor: pointer;
 }
 
 .form-redirection:hover, .form-redirection:active {
-  color: rgba(77, 85, 230, 0.9);
+  color: #e09f4f;
 }
 
 /* Error Message */
@@ -311,17 +331,18 @@ h1, h2, h3, h4 {
 .no-image {
   width: 60%;
   height: 250px;
-  background-color: #AB886F;
+  background-color: #634D32;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: white;
 }
 
 .league-name-container {
   width: 100%;
   height: 80px;
-  background-color: #AB886F;
+  background-color: #634D32;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   display: flex;
@@ -339,7 +360,7 @@ h1, h2, h3, h4 {
 
 .search-leagues h2 {
   font-size: 2.5rem;
-  color: #AB886F;
+  color: #634D32;
 }
 
 .search-leagues h3 {
@@ -354,6 +375,7 @@ h1, h2, h3, h4 {
   border: none;
   border-radius: 10px;
   background-color: #E2B071;
+  color: white;
 }
 
 .league-details-button:active {
@@ -372,6 +394,15 @@ h1, h2, h3, h4 {
   width: 70%;
   margin: 0 auto;
   border-collapse: collapse;
+}
+
+.league-table-section h2 {
+  font-size: 2.5rem;
+}
+
+.league-table-section h3 {
+  color: #634D32;
+  font-size: 1.5rem;
 }
 
 .league-table-row {
