--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,13 @@ h1, h2, h3, h4 {
   text-align: left;
 }
 
+/* Spinner */
+
+.spinner {
+  width: 10%;
+  margin: 0 auto;
+}
+
 /* Forms */
 
 .fru-form {
@@ -89,8 +96,15 @@ h1, h2, h3, h4 {
   margin: 0 auto;
 }
 
-.fru-form-input {
+.fru-form-field-container {
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.fru-form-input {
   border-radius: 5px;
   border: 1px solid rgb(199, 199, 199);
   padding: 20px;
