--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@ h1, h2, h3, h4 {
   text-align: left;
 }
 
+@media (width <= 600px) {
+  .desc-text {
+    width: 85%;
+  }
+}
+
 /* Spinner */
 
 .spinner {
