--- a/src/components/TeamPlayersAndManager/TeamPlayersAndManager.scss
+++ b/src/components/TeamPlayersAndManager/TeamPlayersAndManager.scss
@@ -8,6 +8,7 @@
 
         &--player-card {
             width: 20%;
+            min-width: 300px;
             margin: 3%;
             height: auto;
             border-radius: 10px;
