--- a/src/pages/RecentResults/RecentResults.scss
+++ b/src/pages/RecentResults/RecentResults.scss
@@ -4,6 +4,10 @@
     align-items: center;
     flex-direction: column;
 
+    & h2 {
+        margin-bottom: 0;
+    }
+
     &__fixture-container {
         width: 70%;
         margin: 0 auto;
@@ -14,7 +18,6 @@
 
         &--fixture {
             width: 30%;
-            box-shadow: 1px 1px 4px #ccc;
             margin: 10px;
             border-radius: 10px;
             border-radius: 10px;
@@ -24,9 +27,22 @@
                 margin: 0;
 
                 & img {
-                    border-top-left-radius: 10px;
-                    border-top-right-radius: 10px;
+                    // border-top-left-radius: 10px;
+                    // border-top-right-radius: 10px;
+                    border-radius: 10px;
+                    box-shadow: 1px 1px 4px #000;
                 }
+            }
+
+            &__result {
+                margin-top: 20px;
+                height: 10vh;
+                padding: 10px;
+                box-shadow: 1px 1px 4px #a9a9a9;
+                border-radius: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
 
             @media (width <= 600px) {
