Updated event statistics, recent results and player details screensults and

--- a/src/pages/EventStatistics/EventStatistics.scss
+++ b/src/pages/EventStatistics/EventStatistics.scss
@@ -1,23 +1,78 @@
 .event-statistics {
-
     &__stats-table {
-        width: 80%;
+        width: 60%;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
         margin: 0 auto;
 
+        @media (width <= 600px) {
+            width: 90%;
+        }
+
         &--row {
             width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 1px solid #ccc;
+            background-color: white;
+            box-shadow: 1px 1px 4px #ccc;
+            padding: 0 30px;
+            margin: 10px 0;
+            border-radius: 10px;
+            transition: all .1s ease-in-out;
+
+            &__teams {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                background-color: none;
+                box-shadow: none;
+                padding: 0 20px;
+                
+                & h4 {
+                    margin: 0;
+                }
+            }
+        }
+
+        &--row:not(:first-child):hover {
+            background-color: #E2B071;
         }
     }
 
     &__figure {
-        margin: 0;
+        width: 40%;
+        min-width: 300px;
+        margin: 0 auto;
+    }
+
+    &__video-container {
+
+        width: 60%;
+        margin: 0 auto;
+
+        @media (width <= 600px) {
+            width: 90%;
+        }
+
+        &--wrapper {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+            box-shadow: 1px 1px 7px #242323;
+
+            &__video {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border: none;
+            }
+        }
     }
 }
