--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,14 @@ h4 {
   font-size: 1.5rem;
 }
 
+.left-align {
+  text-align: left;
+}
+
+.right-align {
+  text-align: right;
+}
+
 .fru-section {
   width: 100%;
 }
@@ -351,6 +359,7 @@ h4 {
 .league-card {
   width: 30%;
   height: 350px;
+  min-width: 300px;
   margin: 10px;
   padding-top: 50px;
   display: flex;
@@ -358,7 +367,26 @@ h4 {
   justify-content: space-between;
   align-items: center;
   border-radius: 10px;
-  background: linear-gradient(180deg, #c9b7a1, #634D32);
+  box-shadow: 1px 1px 4px #7d7d7d;
+  background-color: #c8bbac;
+}
+
+.league-badge {
+  width: 60%;
+  margin: 0;
+}
+
+@media (width < 800px) {
+
+  .league-card {
+    width: 70%;
+    min-width: none;
+    height: auto;
+  }
+
+  .league-badge {
+    width: 50%;
+  }
 }
 
 @media (width <= 600px) {
@@ -367,14 +395,14 @@ h4 {
   }
 
   .league-card {
-    width: 100%;
-    height: 300px;
+    width: 90%;
+    min-width: none;
+    height: auto;
   }
-}
 
-.league-badge {
-  width: 60%;
-  margin: 0;
+  .league-badge {
+    width: 50%;
+  }
 }
 
 .league-badge img {
@@ -407,7 +435,6 @@ h4 {
 .league-name {
   width: 90%;
   font-weight: 600;
-  color: white;
 }
 
 /* Search Leagues */
@@ -594,6 +621,8 @@ h4 {
 
 .summary-box h3 {
   margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 1.5rem;
 }
 
 .stadium-button {
@@ -601,7 +630,7 @@ h4 {
   height: 30px;
   margin-top: 20px;
   border: none;
-  background-color:#e2b071cc;
+  background-color:#ccc;
   border-radius: 20px;
   outline: none;
 }
