--- a/src/pages/PlayerDetails/PlayerDetails.scss
+++ b/src/pages/PlayerDetails/PlayerDetails.scss
@@ -44,6 +44,10 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+
+            & h4 {
+                font-size: 1.2rem;
+            }
         }
 
         @media (width <= 600px) {
